--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="/style/style.css" />
     <title>Workshop DOM</title>
   </head>
   <body>
@@ -163,7 +163,9 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <p>Created By Raymond &copy;</p>
+    </footer>
 
     <!-- Bootstrap JS -->
     <script
@@ -173,6 +175,6 @@
     ></script>
 
     <!-- My JS -->
-    <script src="js/script.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
